@@ -1,3 +1,8 @@
+2010-01-15  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* doc/kernel.c (cmain): Handle EGA text video information.
+	* doc/multiboot.h (MULTIBOOT_FRAMEBUFFER_TYPE_EGA_TEXT): New const.
+
 2010-01-14  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* COPYING: Replace with GPLv3 text.
